secondfile/objects/DHStatus_Design_Layout_Record_Details__c.object
<CustomObject>
    <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details-Design Layout Record Details</description>
    <fields>
        <fullName>Additonal_Note__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Additonal Note</description>
        <label>Additonal Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_ID__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Circuit ID</description>
        <label>Circuit ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_CLLI_Code__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Customer CLLI Code</description>
        <label>Customer CLLI Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHStatus_ASR_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-DHStatus-ASR Details</description>
        <label>DHStatus-ASR Details</label>
        <referenceTo>DHStatus_ASR_Details__c</referenceTo>
        <relationshipLabel>DHStatus-Design Layout Record Details</relationshipLabel>
        <relationshipName>DHStatus_Design_Layout_Record_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Designer_Contact_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Designer Contact Number</description>
        <label>Designer Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designer_Initials__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Designer Initials</description>
        <label>Designer Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Layout_Control_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Layout Control Number</description>
        <label>Layout Control Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Contact_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Maintenance Contact Number</description>
        <label>Maintenance Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Contact_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Operations Contact Number</description>
        <label>Operations Contact Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Number__c</fullName>
        <description>RDS-Deal Hash-Update Deal Hash Details- ASR Details- Design Layout Record Details-Service Order Number</description>
        <label>Service Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DHStatus-Design Layout Record Details</label>
    <nameField>
        <displayFormat>DLR-{00000}</displayFormat>
        <label>DHStatus-Design Layout Record Details Na</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DHStatus-Design Layout Record Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>